Added validations for url. Added length validations for username and password. Added progress dialog for location loading. Hide keyboard on pressing login button. Commented admin password usage from setup activity.

--- a/app/src/main/res/layout/activity_setup.xml
+++ b/app/src/main/res/layout/activity_setup.xml
@@ -234,24 +234,24 @@
 
                     </com.google.android.material.textfield.TextInputLayout>
 
-                    <com.google.android.material.textfield.TextInputLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+<!--                    <com.google.android.material.textfield.TextInputLayout-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="wrap_content">-->
 
-                        <EditText
-                            android:id="@id/admin_password"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:hint="@string/prompt_admin_password"
-                            android:imeActionLabel="@string/action_sign_in_short"
-                            android:imeOptions="actionUnspecified"
-                            android:inputType="textPassword"
-                            android:maxLines="1"
-                            android:singleLine="true"
-                            android:textSize="14sp"
-                            android:fontFamily="@font/lato_regular"/>
+<!--                        <EditText-->
+<!--                            android:id="@id/admin_password"-->
+<!--                            android:layout_width="match_parent"-->
+<!--                            android:layout_height="wrap_content"-->
+<!--                            android:hint="@string/prompt_admin_password"-->
+<!--                            android:imeActionLabel="@string/action_sign_in_short"-->
+<!--                            android:imeOptions="actionUnspecified"-->
+<!--                            android:inputType="textPassword"-->
+<!--                            android:maxLines="1"-->
+<!--                            android:singleLine="true"-->
+<!--                            android:textSize="14sp"-->
+<!--                            android:fontFamily="@font/lato_regular"/>-->
 
-                    </com.google.android.material.textfield.TextInputLayout>
+<!--                    </com.google.android.material.textfield.TextInputLayout>-->
 
                 </LinearLayout>
                 </androidx.cardview.widget.CardView>
