--- a/app/src/main/res/layout/activity_setup.xml
+++ b/app/src/main/res/layout/activity_setup.xml
@@ -71,12 +71,17 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:paddingTop="5dp">
+<!--                                app:errorEnabled="true"-->
+<!--                                app:errorTextColor="@color/red"-->
+<!--                                android:id="@+id/url_textInputLayout">-->
 
                                 <EditText
                                     android:id="@+id/editText_URL"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:hint="@string/enter_url"
+                                    android:focusable="true"
+                                    android:focusableInTouchMode="true"
                                     android:textSize="14sp"
                                     android:fontFamily="@font/lato_regular"
                                     android:inputType="textUri" />
@@ -100,6 +105,9 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="5dp"
                                 android:layout_marginBottom="5dp">
+<!--                                app:errorEnabled="true"-->
+<!--                                app:errorTextColor="@color/red"-->
+<!--                                android:id="@+id/location_textInputLayout">-->
 
                                 <Spinner
                                     android:id="@+id/spinner_location"
@@ -131,6 +139,7 @@
                             <TextView
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
+                                android:focusableInTouchMode="true"
                                 android:textSize="16sp"
                                 android:includeFontPadding="false"
                                 android:fontFamily="@font/lato_bold"
@@ -200,12 +209,17 @@
                     <com.google.android.material.textfield.TextInputLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
+<!--                        app:errorEnabled="true"-->
+<!--                        app:errorTextColor="@color/red"-->
+<!--                        android:id="@+id/email_textInputLayout">-->
 
                         <AutoCompleteTextView
                             android:id="@+id/email"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:hint="@string/prompt_email"
+                            android:focusable="true"
+                            android:focusableInTouchMode="true"
                             android:imeOptions="actionNext"
                             android:maxLength="12"
                             android:inputType="textEmailAddress"
@@ -220,11 +234,16 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         app:passwordToggleEnabled="true">
+<!--                        app:errorEnabled="true"-->
+<!--                        app:errorTextColor="@color/red"-->
+<!--                        android:id="@+id/password_textInputLayout">-->
 
                         <EditText
                             android:id="@+id/password"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:focusable="true"
+                            android:focusableInTouchMode="true"
                             android:hint="@string/prompt_password"
                             android:imeOptions="actionNext"
                             android:inputType="textPassword"
