--- a/app/src/main/res/layout/dialog_mindmap_cred.xml
+++ b/app/src/main/res/layout/dialog_mindmap_cred.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <AutoCompleteTextView
+        <EditText
             android:id="@+id/licenseurl"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -27,7 +27,7 @@
         android:layout_height="wrap_content">
 
 
-        <AutoCompleteTextView
+        <EditText
             android:id="@+id/licensekey"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -41,4 +41,31 @@
 
 
     </com.google.android.material.textfield.TextInputLayout>
+
+<!--    <LinearLayout-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginTop="5dp"-->
+<!--        android:orientation="horizontal"-->
+<!--        android:layout_gravity="right">-->
+
+<!--        <TextView-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:text="Cancel"-->
+<!--            android:id="@+id/dialogCancel"-->
+<!--            android:textColor="@color/colorPrimary"-->
+<!--            android:textSize="20sp"/>-->
+
+<!--        <TextView-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:text="OK"-->
+<!--            android:id="@+id/dialogOk"-->
+<!--            android:textColor="@color/colorPrimary"-->
+<!--            android:layout_marginLeft="20dp"-->
+<!--            android:textSize="20sp"/>-->
+
+
+<!--    </LinearLayout>-->
 </LinearLayout>
