--- a/app/src/main/res/layout/dialog_mindmap_cred.xml
+++ b/app/src/main/res/layout/dialog_mindmap_cred.xml
@@ -13,6 +13,8 @@
             android:id="@+id/licenseurl"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
             android:layout_marginTop="5dp"
             android:hint="@string/server_url"
             android:inputType="textAutoComplete"
@@ -31,6 +33,8 @@
             android:id="@+id/licensekey"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
             android:layout_marginTop="5dp"
             android:hint="@string/prompt_licensekey"
             android:fontFamily="@font/lato_regular"
