In progress: Fixing priority issue and Adding search filter

--- a/app/src/main/res/layout/activity_search_patient.xml
+++ b/app/src/main/res/layout/activity_search_patient.xml
@@ -21,29 +21,82 @@
         </com.google.android.material.appbar.AppBarLayout>
 
         <!--<include layout="@layout/content_search_patient" />-->
-        <RelativeLayout
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="?attr/actionBarSize"
+        android:animateLayoutChanges="true"
+        android:id="@+id/filter_layout"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:visibility="gone"
+        android:orientation="horizontal">
+
+<!--        <ImageView-->
+<!--            android:layout_width="30dp"-->
+<!--            android:layout_height="30dp"-->
+<!--            android:src="@drawable/ic_baseline_sort_24"-->
+<!--            android:layout_margin="10dp"/>-->
+
+        <TextView
+            android:layout_width="100dp"
+            android:layout_height="25dp"
+            android:layout_gravity="center"
+            android:background="@drawable/tv_bg"
+            android:text="By Date"
+            android:id="@+id/sort_date"
+            android:textAlignment="center"
+            android:textSize="15sp"
+            android:fontFamily="@font/lato_regular"
+            android:layout_margin="10dp"/>
+
+        <TextView
+            android:layout_width="100dp"
+            android:layout_height="25dp"
+            android:layout_gravity="center"
+            android:background="@drawable/tv_bg"
+            android:text="By Creator"
+            android:id="@+id/sort_creator"
+            android:textAlignment="center"
+            android:textSize="15sp"
+            android:fontFamily="@font/lato_regular"
+            android:layout_margin="10dp"/>
+
+        <TextView
+            android:layout_width="100dp"
+            android:layout_height="25dp"
+            android:layout_gravity="center"
+            android:background="@drawable/tv_bg"
+            android:text="By Age"
+            android:id="@+id/sort_age"
+            android:textAlignment="center"
+            android:textSize="15sp"
+            android:fontFamily="@font/lato_regular"
+            android:layout_margin="10dp"/>
+    </LinearLayout>
+
+    <RelativeLayout
+        android:id="@+id/relativeLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginHorizontal="5dp"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        tools:context=".activities.search_patient_activity.SearchPatientActivity"
+        tools:showIn="@layout/activity_search_patient">
+
+        <TextView
+            android:id="@+id/textviewmessage"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:fontFamily="@font/lato_regular"
+            android:text="@string/please_wait_till_sync_is_completed"
+            android:visibility="visible" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycle"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginHorizontal="5dp"
-            android:layout_marginTop="10dp"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"
-            tools:context=".activities.search_patient_activity.SearchPatientActivity"
-            tools:showIn="@layout/activity_search_patient">
+            android:visibility="gone" />
+    </RelativeLayout>
 
-            <TextView
-                android:id="@+id/textviewmessage"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="@string/please_wait_till_sync_is_completed"
-                android:fontFamily="@font/lato_regular"
-                android:visibility="visible" />
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recycle"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:visibility="gone" />
-        </RelativeLayout>
-
-
-    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
