--- a/app/src/main/res/menu/menu_search.xml
+++ b/app/src/main/res/menu/menu_search.xml
@@ -9,12 +9,12 @@
         app:actionViewClass="androidx.appcompat.widget.SearchView"
         app:showAsAction="ifRoom" />
     <!-- Location Found -->
-    <!--<item-->
-    <!--android:id="@+id/action_filter"-->
-    <!--android:icon="@drawable/ic_sort_white_24dp"-->
-    <!--android:orderInCategory="2"-->
-    <!--android:title="Filter"-->
-    <!--app:showAsAction="ifRoom" />-->
+        <item
+        android:id="@+id/action_filter"
+        android:icon="@drawable/ic_sort_white_24dp"
+        android:orderInCategory="2"
+        android:title="Filter"
+        app:showAsAction="ifRoom" />
     <!--<item-->
     <!--android:id="@+id/action_filter"-->
     <!--android:title="Filter by Creator"-->
