Fixed IMT-93 - New UI End Visit

--- a/app/src/main/res/layout/activity_search_patient.xml
+++ b/app/src/main/res/layout/activity_search_patient.xml
@@ -45,5 +45,12 @@
                 android:visibility="gone" />
         </RelativeLayout>
 
-
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/new_patient"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
+        app:srcCompat="@drawable/ic_add_24dp"
+        />
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
