Completed: IS-19 : Remove all the languages except English

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -2,24 +2,24 @@
 
 
     <string-array name="language_names">
-        <item>Hindi</item>
+<!--        <item>Hindi</item>--> //commenting out these languages for jhpiego project
         <item>English</item>
-        <item>Marathi</item>
-        <item>Kannada</item>
-        <item>Gujarati</item>
-        <item>Odiya</item>
-        <item>Assamese</item>
+<!--        <item>Marathi</item>-->
+<!--        <item>Kannada</item>-->
+<!--        <item>Gujarati</item>-->
+<!--        <item>Odiya</item>-->
+<!--        <item>Assamese</item>-->
 <!--        <item>Cebuano</item>-->
     </string-array>
 
     <string-array name="language_values">
-        <item>hi</item>
+<!--        <item>hi</item>-->
         <item>en</item>
-        <item>mr</item>
-        <item>kn</item>
-        <item>gu</item>
-        <item>or</item>
-        <item>as</item>
+<!--        <item>mr</item>-->
+<!--        <item>kn</item>-->
+<!--        <item>gu</item>-->
+<!--        <item>or</item>-->
+<!--        <item>as</item>-->
 <!--        <item>cb</item>-->
     </string-array>
 
