--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -24,47 +24,47 @@
                 android:orientation="vertical"
                 android:padding="16dp">
 
-<!--
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/cardview_newpat"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@color/white"
-                    android:foreground="?android:attr/selectableItemBackground"
-                    android:padding="16dp"
-                    app:cardCornerRadius="5dp"
-                    app:cardElevation="5dp"
-                    app:cardUseCompatPadding="true">
+                <!--
+                                <androidx.cardview.widget.CardView
+                                    android:id="@+id/cardview_newpat"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:background="@color/white"
+                                    android:foreground="?android:attr/selectableItemBackground"
+                                    android:padding="16dp"
+                                    app:cardCornerRadius="5dp"
+                                    app:cardElevation="5dp"
+                                    app:cardUseCompatPadding="true">
 
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="center_vertical"
-                        android:padding="16dp">
+                                    <RelativeLayout
+                                        android:layout_width="match_parent"
+                                        android:layout_height="wrap_content"
+                                        android:gravity="center_vertical"
+                                        android:padding="16dp">
 
-                        <ImageView
-                            android:id="@+id/iv_new_patient"
-                            android:layout_width="30dp"
-                            android:layout_height="30dp"
-                            android:layout_centerVertical="true"
-                            android:contentDescription="TODO"
-                            app:srcCompat="@drawable/ic_person_add_24dp" />
+                                        <ImageView
+                                            android:id="@+id/iv_new_patient"
+                                            android:layout_width="30dp"
+                                            android:layout_height="30dp"
+                                            android:layout_centerVertical="true"
+                                            android:contentDescription="TODO"
+                                            app:srcCompat="@drawable/ic_person_add_24dp" />
 
-                        <TextView
-                            android:id="@+id/newPatient_textview"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginStart="10dp"
-                            android:layout_toEndOf="@+id/iv_new_patient"
-                            android:text="@string/new_patient"
-                            android:includeFontPadding="false"
-                            android:fontFamily="@font/lato_medium"
-                            android:textSize="28sp" />
+                                        <TextView
+                                            android:id="@+id/newPatient_textview"
+                                            android:layout_width="wrap_content"
+                                            android:layout_height="wrap_content"
+                                            android:layout_marginStart="10dp"
+                                            android:layout_toEndOf="@+id/iv_new_patient"
+                                            android:text="@string/new_patient"
+                                            android:includeFontPadding="false"
+                                            android:fontFamily="@font/lato_medium"
+                                            android:textSize="28sp" />
 
-                    </RelativeLayout>
+                                    </RelativeLayout>
 
-                </androidx.cardview.widget.CardView>
--->
+                                </androidx.cardview.widget.CardView>
+                -->
 
                 <androidx.cardview.widget.CardView
                     android:id="@+id/cardview_find_patient"
@@ -97,9 +97,9 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="10dp"
                             android:layout_toEndOf="@+id/iv_find_patient"
-                            android:text="@string/find_patient"
-                            android:includeFontPadding="false"
                             android:fontFamily="@font/lato_medium"
+                            android:includeFontPadding="false"
+                            android:text="@string/find_patient"
                             android:textSize="28sp" />
 
                     </RelativeLayout>
@@ -136,9 +136,9 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="10dp"
                             android:layout_toEndOf="@+id/iv_today_patients"
-                            android:text="@string/today_visits"
-                            android:includeFontPadding="false"
                             android:fontFamily="@font/lato_medium"
+                            android:includeFontPadding="false"
+                            android:text="@string/today_visits"
                             android:textSize="28sp" />
 
                     </RelativeLayout>
@@ -175,10 +175,62 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="10dp"
                             android:layout_toEndOf="@+id/iv_active_patients"
-                            android:text="@string/active_visits"
-                            android:includeFontPadding="false"
                             android:fontFamily="@font/lato_medium"
+                            android:includeFontPadding="false"
+                            android:text="@string/active_visits"
                             android:textSize="28sp" />
+
+                    </RelativeLayout>
+
+                </androidx.cardview.widget.CardView>
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/cardview_alert_patients"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/white"
+                    android:foreground="?android:attr/selectableItemBackground"
+                    android:onClick="showTheRiskPatients"
+                    app:cardCornerRadius="5dp"
+                    app:cardElevation="5dp"
+                    app:cardUseCompatPadding="true">
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_vertical"
+                        android:padding="16dp">
+
+                        <ImageView
+                            android:id="@+id/iv_alert_patients"
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
+                            android:layout_centerVertical="true"
+                            android:contentDescription="TODO"
+                            app:srcCompat="@drawable/ic_baseline_warning_24" />
+
+                        <TextView
+                            android:id="@+id/alert_visits_textview"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="10dp"
+                            android:layout_toEndOf="@+id/iv_alert_patients"
+                            android:fontFamily="@font/lato_medium"
+                            android:includeFontPadding="false"
+                            android:text="High Risk Patients"
+                            android:textSize="28sp" />
+
+                        <TextView
+                            android:id="@+id/alert_visits_counts_textview"
+                            android:layout_width="36dip"
+                            android:layout_height="36dip"
+                            android:layout_alignParentEnd="true"
+                            android:background="@drawable/ic_baseline_lens_24"
+                            android:gravity="center"
+                            android:text="0"
+                            android:textColor="@color/white"
+                            android:textSize="12sp"
+                            android:textStyle="bold" />
 
                     </RelativeLayout>
 
@@ -215,9 +267,9 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="10dp"
                             android:layout_toEndOf="@+id/iv_video_library"
-                            android:text="@string/video_library"
-                            android:includeFontPadding="false"
                             android:fontFamily="@font/lato_medium"
+                            android:includeFontPadding="false"
+                            android:text="@string/video_library"
                             android:textSize="28sp" />
 
                     </RelativeLayout>
@@ -235,37 +287,36 @@
                     app:cardElevation="5dp"
                     app:cardUseCompatPadding="true">
 
-                        <RelativeLayout
-                            android:id="@+id/help_relative"
-                            android:layout_width="match_parent"
+                    <RelativeLayout
+                        android:id="@+id/help_relative"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_vertical"
+                        android:padding="16dp">
+
+                        <ImageView
+                            android:id="@+id/iv_whatsapp_helpline"
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
+                            android:layout_centerVertical="true"
+                            android:contentDescription="TODO"
+                            app:srcCompat="@drawable/ic_icons8_whatsapp" />
+
+                        <TextView
+                            android:id="@+id/help_textview"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:gravity="center_vertical"
-                            android:padding="16dp">
+                            android:layout_marginStart="10dp"
+                            android:layout_toEndOf="@+id/iv_whatsapp_helpline"
+                            android:fontFamily="@font/lato_medium"
+                            android:includeFontPadding="false"
+                            android:text="@string/Whatsapp_Help_Cardview"
+                            android:textSize="28sp" />
 
-                            <ImageView
-                                android:id="@+id/iv_whatsapp_helpline"
-                                android:layout_width="30dp"
-                                android:layout_height="30dp"
-                                android:layout_centerVertical="true"
-                                android:contentDescription="TODO"
-                                app:srcCompat="@drawable/ic_icons8_whatsapp" />
-
-                            <TextView
-                                android:id="@+id/help_textview"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginStart="10dp"
-                                android:layout_toEndOf="@+id/iv_whatsapp_helpline"
-                                android:text="@string/Whatsapp_Help_Cardview"
-                                android:includeFontPadding="false"
-                                android:fontFamily="@font/lato_medium"
-                                android:textSize="28sp"/>
-
-                            <!-- Icon Credits:- <a target="_blank" href="https://icons8.com/icons/set/whatsapp">WhatsApp icon</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>-->
+                        <!-- Icon Credits:- <a target="_blank" href="https://icons8.com/icons/set/whatsapp">WhatsApp icon</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>-->
 
 
-                        </RelativeLayout>
-
+                    </RelativeLayout>
 
 
                 </androidx.cardview.widget.CardView>
@@ -296,11 +347,11 @@
                             android:clickable="true"
                             android:drawableLeft="@drawable/ic_baseline_refresh_24"
                             android:drawablePadding="5dp"
+                            android:fontFamily="@font/lato_regular"
+                            android:includeFontPadding="false"
                             android:paddingHorizontal="10dp"
                             android:text="@string/refresh"
                             android:textColor="@color/colorPrimary"
-                            android:includeFontPadding="false"
-                            android:fontFamily="@font/lato_regular"
                             android:textSize="15sp" />
 
                         <LinearLayout
@@ -316,9 +367,9 @@
                                 android:layout_height="wrap_content"
                                 android:layout_alignParentStart="true"
                                 android:layout_centerInParent="true"
-                                android:text="@string/lastsync"
-                                android:includeFontPadding="false"
                                 android:fontFamily="@font/lato_regular"
+                                android:includeFontPadding="false"
+                                android:text="@string/lastsync"
                                 android:textSize="14sp" />
 
                             <TextView
@@ -328,11 +379,11 @@
                                 android:layout_alignParentStart="true"
                                 android:layout_centerInParent="true"
                                 android:layout_marginEnd="10dp"
-                                tools:text="2 hours ago"
-                                android:visibility="gone"
-                                android:includeFontPadding="false"
                                 android:fontFamily="@font/lato_regular"
-                                android:textSize="14sp" />
+                                android:includeFontPadding="false"
+                                android:textSize="14sp"
+                                android:visibility="gone"
+                                tools:text="2 hours ago" />
 
                         </LinearLayout>
 
