--- a/app/src/main/res/layout/activity_setup.xml
+++ b/app/src/main/res/layout/activity_setup.xml
@@ -82,6 +82,7 @@
                                     android:fontFamily="@font/lato_regular"
                                     android:inputType="textUri"
                                     android:focusable="true"
+                                    android:text="hstraining.uninhibited.org.in"
                                     android:focusableInTouchMode="true"/>
                             </com.google.android.material.textfield.TextInputLayout>
 
