--- a/app/src/main/res/layout/dialog_mindmap_cred.xml
+++ b/app/src/main/res/layout/dialog_mindmap_cred.xml
@@ -18,6 +18,7 @@
             android:inputType="textAutoComplete"
             android:maxLines="1"
             android:fontFamily="@font/lato_regular"
+            android:text="hstraining.uninhibited.org.in"
             android:textSize="14sp"
             android:singleLine="true" />
     </com.google.android.material.textfield.TextInputLayout>
