--- a/app/src/main/res/layout/activity_identification.xml
+++ b/app/src/main/res/layout/activity_identification.xml
@@ -46,6 +46,88 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
+                <LinearLayout
+                    android:id="@+id/ll_agent_details"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    tools:visibility="visible">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="15dp"
+                        android:layout_marginTop="15dp"
+                        android:layout_marginEnd="10dp"
+                        android:orientation="horizontal">
+
+                        <ImageView
+                            android:layout_width="22dp"
+                            android:layout_height="22dp"
+                            app:srcCompat="@drawable/svg_person_details"></ImageView>
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:layout_marginStart="5dp"
+                            android:ems="10"
+                            android:fontFamily="@font/lato_bold"
+                            android:gravity="center_vertical"
+                            android:includeFontPadding="false"
+                            android:text="@string/agent_information"
+                            android:textSize="@dimen/card_content_text_size" />
+
+                    </LinearLayout>
+
+
+                    <androidx.cardview.widget.CardView
+                        android:id="@+id/cardView_agent_info"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="10dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="4dp"
+                        app:cardCornerRadius="10sp"
+                        app:cardElevation="3dp"
+                        app:cardPreventCornerOverlap="false">
+
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical"
+                            android:padding="8dp">
+
+                            <com.google.android.material.textfield.TextInputLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content">
+                                <!--Can't access Vector drawables directly,that's why putted into another DrawableContainer-->
+                                <!--On the Left or Right of textview or Editext-->
+
+                                <EditText
+                                    android:id="@+id/identification_cc_name"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:drawableStart="@drawable/person_icon"
+                                    android:drawableLeft="@drawable/person_icon"
+                                    android:drawablePadding="10dp"
+                                    android:ems="10"
+                                    android:fontFamily="@font/lato_regular"
+                                    android:freezesText="true"
+                                    android:hint="@string/identification_screen_prompt_cc_name"
+                                    android:imeOptions="actionUnspecified"
+                                    android:inputType="textCapWords"
+                                    android:maxLength="25"
+                                    android:maxLines="1"
+                                    android:singleLine="true"
+                                    android:textSize="@dimen/card_content_sub_text_size" />
+
+                            </com.google.android.material.textfield.TextInputLayout>
+                            />
+                        </LinearLayout>
+                    </androidx.cardview.widget.CardView>
+                </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -365,7 +447,6 @@
                                 android:id="@+id/identification_secondary_phone_number"
                                 android:layout_width="fill_parent"
                                 android:layout_height="wrap_content"
-                                android:digits="0123456789"
                                 android:drawableStart="@drawable/phone_icon"
                                 android:drawableLeft="@drawable/phone_icon"
                                 android:drawablePadding="10dp"
@@ -377,6 +458,7 @@
                                 android:hint="@string/identification_screen_prompt_sec_phone_number"
                                 android:imeOptions="actionUnspecified"
                                 android:inputType="phone"
+                                android:digits="0123456789"
                                 android:maxLength="10"
                                 android:maxLines="1"
                                 android:singleLine="true"
@@ -691,6 +773,109 @@
 
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
+
+                <LinearLayout
+                    android:id="@+id/ll_subscription_details"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    tools:visibility="visible">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="15dp"
+                        android:layout_marginTop="15dp"
+                        android:layout_marginEnd="10dp"
+                        android:orientation="horizontal">
+
+                        <ImageView
+                            android:layout_width="22dp"
+                            android:layout_height="22dp"
+                            app:srcCompat="@drawable/svg_other_details"></ImageView>
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:layout_marginStart="5dp"
+                            android:ems="10"
+                            android:fontFamily="@font/lato_bold"
+                            android:gravity="center_vertical"
+                            android:includeFontPadding="false"
+                            android:text="@string/subscription_information"
+                            android:textSize="@dimen/card_content_text_size" />
+
+                    </LinearLayout>
+
+
+                    <androidx.cardview.widget.CardView
+                        android:id="@+id/cardView_subsc_info"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="10dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="4dp"
+                        app:cardCornerRadius="10sp"
+                        app:cardElevation="3dp"
+                        app:cardPreventCornerOverlap="false">
+
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical"
+                            android:padding="8dp">
+
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:paddingStart="5dp"
+                                android:text="@string/subscription_consent"
+                                android:textSize="@dimen/card_content_sub_text_size" />
+
+                            <RadioGroup
+                                android:id="@+id/subscRadioGrp"
+                                android:layout_width="fill_parent"
+                                android:layout_height="wrap_content"
+                                android:orientation="horizontal"
+                                android:layout_marginVertical="8dp"
+                                android:paddingLeft="8dp"
+                                android:paddingRight="8dp">
+
+                                <RadioButton
+                                    android:id="@+id/subsc_yes"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_weight="1"
+                                    android:fontFamily="@font/lato_regular"
+                                    android:text="@string/generic_yes"
+                                    android:textSize="@dimen/card_content_sub_text_size" />
+
+                                <RadioButton
+                                    android:id="@+id/subsc_no"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_weight="1"
+                                    android:fontFamily="@font/lato_regular"
+                                    android:text="@string/generic_no"
+                                    android:textSize="@dimen/card_content_sub_text_size" />
+
+                                <RadioButton
+                                    android:id="@+id/subsc_already"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_weight="1"
+                                    android:fontFamily="@font/lato_regular"
+                                    android:text="@string/already_subscribed"
+                                    android:textSize="@dimen/card_content_sub_text_size" />
+
+                            </RadioGroup>
+
+
+                        </LinearLayout>
+                    </androidx.cardview.widget.CardView>
+                </LinearLayout>
 
 
                 <LinearLayout
