--- a/app/src/main/res/menu/menu_home.xml
+++ b/app/src/main/res/menu/menu_home.xml
@@ -27,6 +27,18 @@
         <!--android:id="@+id/restoreOption"-->
         <!--android:orderInCategory="125"-->
         <!--android:title="Restore" />-->
+
+        <item
+            android:id="@+id/recordingsOption"
+            android:orderInCategory="100"
+            android:title="@string/call_recordings" />
+
+        <item
+            android:id="@+id/performanceOption"
+            android:orderInCategory="100"
+            android:title="@string/Daily_Performance_Activity_Title" />
+
+
         <item
             android:id="@+id/updateProtocolsOption"
             android:orderInCategory="150"
