--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -14,7 +14,7 @@
         tools:showIn="@layout/activity_home">
 
         <ScrollView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent">
 
             <LinearLayout
@@ -702,6 +702,20 @@
                     </androidx.cardview.widget.CardView>
 
                 </LinearLayout>
+
+                <TextView
+                    android:id="@+id/locationTV"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:fontFamily="@font/lato_regular"
+                    android:includeFontPadding="false"
+                    android:drawablePadding="2dp"
+                    android:textSize="14sp"
+                    android:drawableStart="@drawable/ic_baseline_location_on_24"
+                    android:layout_marginTop="10dp"
+                    tools:text="@string/location_setup"
+                    tools:visibility="visible" />
 
             </LinearLayout>
 
