Solved the Update Api issue  of hw

--- a/app/src/main/res/menu/menu_edit_hw_profile.xml
+++ b/app/src/main/res/menu/menu_edit_hw_profile.xml
@@ -6,7 +6,7 @@
         android:id="@+id/hw_profile_image_edit"
         android:icon="@drawable/ic_hw_profile_image_edit"
         android:title="Profile"
-        android:visible="false"
+        android:visible="true"
         app:showAsAction="always" />
 
 </menu>
