Hw profile update validation implemented

--- a/app/src/main/res/layout/activity_hw_profile.xml
+++ b/app/src/main/res/layout/activity_hw_profile.xml
@@ -132,6 +132,7 @@
                 android:layout_height="150dp"
                 android:layout_gravity="center_horizontal"
                 android:elevation="65dp"
+                android:clickable="false"
                 android:layout_marginTop="50dp"
                 app:civ_border_color="#fff"
                 app:civ_border_width="2dp"
@@ -402,6 +403,9 @@
                         android:focusableInTouchMode="false"
                         android:focusable="false"
                         android:clickable="false"
+                        android:maxLength="10"
+                        android:digits="0123456789"
+                        android:inputType="phone"
                         android:textColor="@color/font_black_0"
                         android:textStyle="bold"
                         android:textSize="@dimen/card_content_normal_text_size" />
@@ -443,6 +447,9 @@
                         android:imeOptions="actionUnspecified"
                         android:background="@drawable/button_bg_rounded_corners"
                         android:backgroundTint="@color/white"
+                        android:maxLength="10"
+                        android:digits="0123456789"
+                        android:inputType="phone"
                         android:layout_weight="1"
                         android:cursorVisible="false"
                         android:focusableInTouchMode="false"
